cluster/infra/network/envoy-gateway/gateway-external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  namespace: network
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: ${ENVOY_EXTERNAL_LB_IP}
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - name: ${BASE_DOMAIN/./-}-tls
            kind: Secret
    - name: ssh
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
      port: 22
      protocol: TCP
