cluster/infra/network/envoy-gateway/redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envoy-https-redirect
  namespace: network
spec:
  parentRefs:
    - name: envoy-external
      sectionName: http
    - name: envoy-internal
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
